Refactored radial system